# libra

./: .gitignore  .gitmodules  README.md
.devcontainer/: Dockerfile  Dockerfile.in  devcontainer.json  setup.py
binder/: Cargo.toml
binder/builder/: Cargo.toml
binder/builder/src/: lib.rs  main.rs
binder/builder/src/pass/: mod.rs
binder/builder/src/util/: git.rs
binder/engine/: Cargo.toml  build.rs
binder/engine/src/: lib.rs  main.rs
binder/engine/src/analysis/: bits.rs  constant.rs  generic.rs  liveness.rs  mod.rs  range.rs  sign.rs
binder/engine/src/error/: mod.rs
binder/engine/src/flow/: build_simple.rs  fixedpoint.rs  mod.rs  shared.rs
binder/engine/src/ir/: mod.rs
binder/engine/src/ir/adapter/: cfg.rs  constant.rs  function.rs  global.rs  instruction.rs  mod.rs  module.rs  typing.rs  value.rs
binder/engine/src/ir/bridge/: cfg.rs  constant.rs  function.rs  global.rs  instruction.rs  intrinsics.rs  mod.rs  module.rs  shared.rs  typing.rs  value.rs
binder/engine/tests/: integration.rs
binder/engine/tests/function/unnamed-param/: main.c
binder/engine/tests/global/array/: main.c
binder/engine/tests/global/bitfield/: main.c
binder/engine/tests/global/default/: main.c
binder/engine/tests/global/expr/: main.c
binder/engine/tests/global/int/: main.c
binder/engine/tests/global/pointer/: main.c
binder/engine/tests/global/ref/: main.c
binder/engine/tests/global/struct/: main.c
binder/engine/tests/global/tls/: main.c  output
binder/engine/tests/global/weak/: main.c  output
binder/engine/tests/instruction/alloca/: main.c
binder/engine/tests/instruction/binary/: main.c
binder/engine/tests/instruction/call-direct/: main.c
binder/engine/tests/instruction/call-indirect/: main.c
binder/engine/tests/instruction/cast/: main.c
binder/engine/tests/instruction/compare/: main.c
binder/engine/tests/instruction/gep/: main.c
binder/engine/tests/instruction/inline-asm/: main.c  output
binder/engine/tests/instruction/ite/: main.c
binder/engine/tests/instruction/load-store/: main.c
binder/engine/tests/instruction/phi-loop/: main.c
binder/engine/tests/instruction/switch/: main.c
binder/engine/tests/instruction/unreachable/: main.c
binder/engine/tests/module-level-asm/: main.c  output
binder/engine/tests/typing/float-1/: main.c
binder/engine/tests/typing/float-2/: main.c  output
binder/engine/tests/typing/float-3/: main.c
binder/engine/tests/typing/int/: main.c
binder/engine/tests/typing/struct-recursive/: main.c
binder/engine/tests/typing/struct-undef/: main.c
binder/example/: Cargo.toml  build.rs
binder/example/src/: analyze.rs  common.rs  lib.rs  main.rs  proxy.rs  snippet.rs  wllvm.rs  workflow.rs
binder/example/src/apps/: mod.rs
binder/example/src/apps/apache_httpd/: mod.rs
binder/example/src/apps/apache_httpd/configs/: default.json
binder/example/src/apps/libxml2/: mod.rs
binder/example/src/apps/pcre2/: mod.rs
binder/example/src/apps/pcre2/configs/: default.json
binder/example/src/apps/zlib/: mod.rs
binder/example/src/apps/zlib/configs/: default.json
binder/shared/: Cargo.toml
binder/shared/src/: compile_db.rs  config.rs  dep.rs  git.rs  lib.rs  logging.rs
binder/testsuite/: Cargo.toml
binder/testsuite/src/: common.rs  lib.rs  llvm.rs  llvm_external.rs  llvm_internal.rs  llvm_lit.rs  main.rs
binder/testsuite/stdlib-mock/: assert.h  inttypes.h  pthread.h  setjmp.h  stdarg.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  strings.h
docker/: Dockerfile  Makefile  script.sh
docker/script/: build.sh
oracle/: .gitignore  CMakeLists.txt
oracle/IR/: Adapted.cpp  Adapted.h  CMakeLists.txt
oracle/Libra/: CMakeLists.txt  Config.hpp  Deps.h  Logger.cpp  Logger.h  Metadata.cpp  Metadata.h  MetadataFunction.cpp  Oracle.cpp  Oracle.h  Pass.cpp  SerializeAsm.cpp  SerializeConstant.cpp  SerializeFunction.cpp  SerializeGlobalVariable.cpp  SerializeInstruction.cpp  SerializeModule.cpp  SerializeType.cpp  SerializeValue.cpp  Serializer.h  SerializerContext.cpp
oracle/Main/: CMakeLists.txt  Pass.cpp
oracle/Shared/: CMakeLists.txt  Command.cpp  Command.h  Deps.h  Logger.cpp  Logger.h  Oracle.cpp  Oracle.h
