[workspace]
members = [
    "shared",
    "builder",
    "engine",
    "testsuite",
    "example",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.89"
datatest-stable = "0.2.9"
fs_extra = "1.3.0"
lazy_static = "1.5.0"
log = "0.4.22"
petgraph = "0.6.5"
rayon = "1.10.0"
rug = "1.26.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.128", features = ["unbounded_depth"] }
simplelog = "0.12.2"
structopt = "0.3.26"
tempfile = "3.12.0"
walkdir = "2.5.0"
libra-builder = { path = "builder" }
libra-engine = { path = "engine" }
libra-shared = { path = "shared" }