[package]
name = "libra-builder"
description = "A custom builder for LLVM and LIBRA"
version = "0.1.0"
authors = ["Meng Xu <meng.xu.cs@uwaterloo.ca>"]
license = "GPL-3.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
structopt = { workspace = true }
libra-shared = { workspace = true }
