[package]
name = "libra-engine"
description = "The main engine for High-Fidelity Symbolic Execution"
version = "0.1.0"
authors = ["Meng Xu <meng.xu.cs@uwaterloo.ca>"]
license = "GPL-3.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
datatest-stable = "0.2.3"
fs_extra = "1.3.0"
log = "0.4.20"
petgraph = "0.6.4"
rug = "1.24.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = { version = "1.0.113", features = ["unbounded_depth"] }
structopt = "0.3.26"
tempfile = "3.9.0"
libra-builder = { path = "../builder" }
libra-shared = { path = "../shared" }

[[test]]
name = "integration"
harness = false
