[package]
name = "libra-engine"
description = "The main engine for High-Fidelity Symbolic Execution"
version = "0.1.0"
authors = ["Meng Xu <meng.xu.cs@uwaterloo.ca>"]
license = "GPL-3.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
datatest-stable = { workspace = true }
fs_extra = { workspace = true }
log = { workspace = true }
petgraph = { workspace = true }
rug = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
structopt = { workspace = true }
tempfile = { workspace = true }
libra-builder = { workspace = true }
libra-shared = { workspace = true }

[[test]]
name = "integration"
harness = false
