[package]
name = "libra-example"
description = "Examples for using LIBRA for bug analysis"
version = "0.1.0"
authors = ["Meng Xu <meng.xu.cs@uwaterloo.ca>"]
license = "GPL-3.0"
edition = "2021"

[build-dependencies]
libra-builder = { path = "../builder" }
libra-shared = { path = "../shared" }

[dependencies]
anyhow = "1.0.75"
lazy_static = "1.4.0"
log = "0.4.20"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = { version = "1.0.108", features = ["unbounded_depth"] }
structopt = "0.3.26"
libra-builder = { path = "../builder" }
libra-engine = { path = "../engine" }
libra-shared = { path = "../shared" }