[package]
name = "libra-example"
description = "Examples for using LIBRA for bug analysis"
version = "0.1.0"
authors = ["Meng Xu <meng.xu.cs@uwaterloo.ca>"]
license = "GPL-3.0"
edition = "2021"
default-run = "libra-example"

[dependencies]
anyhow = "1.0.79"
lazy_static = "1.4.0"
log = "0.4.20"
petgraph = "0.6.4"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = { version = "1.0.113", features = ["unbounded_depth"] }
structopt = "0.3.26"
walkdir = "2.4.0"
libra-builder = { path = "../builder" }
libra-engine = { path = "../engine" }
libra-shared = { path = "../shared" }