[package]
name = "libra-example"
description = "Examples for using LIBRA for bug analysis"
version = "0.1.0"
authors = ["Meng Xu <meng.xu.cs@uwaterloo.ca>"]
license = "GPL-3.0"
edition = "2021"
default-run = "libra-example"

[dependencies]
anyhow = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
petgraph = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
structopt = { workspace = true }
walkdir = { workspace = true }
libra-builder = { workspace = true }
libra-engine = { workspace = true }
libra-shared = { workspace = true }