[package]
name = "libra-shared"
description = "Shared utilities for multiple LIBRA components"
version = "0.1.0"
authors = ["Meng Xu <meng.xu.cs@uwaterloo.ca>"]
license = "GPL-3.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
lazy_static = "1.4.0"
log = "0.4.20"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = { version = "1.0.113", features = ["unbounded_depth"] }
simplelog = "0.12.1"
tempfile = "3.10.0"