[package]
name = "libra-testsuite"
description = "Testsuite for LIBRA components"
version = "0.1.0"
authors = ["Meng Xu <meng.xu.cs@uwaterloo.ca>"]
license = "GPL-3.0"
edition = "2021"

[build-dependencies]
libra-builder = { path = "../builder" }
libra-shared = { path = "../shared" }

[dependencies]
anyhow = "1.0.75"
fs_extra = "1.3.0"
lazy_static = "1.4.0"
log = "0.4.20"
rayon = "1.8.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = { version = "1.0.108", features = ["unbounded_depth"] }
structopt = "0.3.26"
tempfile = "3.8.1"
walkdir = "2.4.0"
libra-builder = { path = "../builder" }
libra-engine = { path = "../engine" }
libra-shared = { path = "../shared" }
