[package]
name = "libra-testsuite"
description = "Testsuite for LIBRA components"
version = "0.1.0"
authors = ["Meng Xu <meng.xu.cs@uwaterloo.ca>"]
license = "GPL-3.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
fs_extra = "1.3.0"
lazy_static = "1.4.0"
log = "0.4.20"
rayon = "1.8.1"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = { version = "1.0.113", features = ["unbounded_depth"] }
structopt = "0.3.26"
tempfile = "3.9.0"
walkdir = "2.4.0"
libra-builder = { path = "../builder" }
libra-engine = { path = "../engine" }
libra-shared = { path = "../shared" }
