[package]
name = "libra-testsuite"
description = "Testsuite for LIBRA components"
version = "0.1.0"
authors = ["Meng Xu <meng.xu.cs@uwaterloo.ca>"]
license = "GPL-3.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
fs_extra = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
walkdir = { workspace = true }
libra-builder = { workspace = true }
libra-engine = { workspace = true }
libra-shared = { workspace = true }
